--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ input {
     justify-content: flex-start;
     align-items: center;
     margin-bottom: 10px;
-    margin-top: 50px;
+    margin-top: 100px;
     padding-bottom: 25px;
     border-bottom: 1px solid #ffc423;
 }
@@ -74,4 +74,15 @@ input {
     display: flex;
     justify-content: space-between;
     margin-bottom: 40px;
+}
+/* Media Queries */
+@media screen and (max-width: 600px) {
+    body {
+        padding: 20px;
+    }
+
+    .input-group label,
+    .wage-input label {
+        width: 100%;
+    }
 }
