--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,7 @@ input {
     margin-bottom: 40px;
 }
 /* Media Queries */
-@media screen and (max-width: 600px) {
+@media only screen and (max-width: 600px) {
     body {
         padding: 20px;
     }
